--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -8167,7 +8167,7 @@ Austria/Eisenerz
 Austria/Eisenstadt
 Austria/Enns
 Austria/Feldkirch
-Austria/Feldkirchen_in_Karnten
+Austria/Feldkirchen_in_Kärnten
 Austria/Flachau
 Austria/Fugen
 Austria/Galtür
@@ -8187,7 +8187,7 @@ Austria/Jennersdorf
 Austria/Kals_am_Grossglockner
 Austria/Kapfenberg
 Austria/Kaprun
-Austria/Kitzbuhel
+Austria/Kitzbühel
 Austria/Klagenfurt
 Austria/Kleinwalsertal
 Austria/Klosterneuburg
@@ -8209,7 +8209,7 @@ Austria/Mattersburg
 Austria/Mödling
 Austria/Nassfeld
 Austria/Nauders
-Austria/Neudorfl
+Austria/Neudörfl
 Austria/Neusiedl_am_See
 Austria/Obergurgl_-_Hochgurgl
 Austria/Obertauern
@@ -8222,7 +8222,7 @@ Austria/Saalfelden_am_Steinernen_Meer
 Austria/Salzburg
 Austria/Sankt_Andra
 Austria/Sankt_Anton_am_Arlberg
-Austria/Sankt_Polten
+Austria/Sankt_Pölten
 Austria/Sankt_Veit_an_der_Glan
 Austria/Schröcken
 Austria/Schruns
@@ -8245,7 +8245,7 @@ Austria/Wien
 Austria/Wiener_Neustadt
 Austria/Wolfurt
 Austria/Wolfsberg
-Austria/Worgl
+Austria/Wörgl
 Austria/Unken
 Austria/Velden_am_Worthersee
 Austria/Villach
@@ -8612,7 +8612,7 @@ France/Valence
 France/Versailles
 ########
 Germany/Aach
-Germany/Kreisfreie_Stadt_Aachen
+Germany/Aachen
 Germany/Aalen
 Germany/Aasbuttel
 Germany/Abbenrode
@@ -8774,7 +8774,7 @@ Germany/Alt_Duvenstedt
 Germany/Alt_Katwin
 Germany/Alt_Krenzlin
 Germany/Alt_Meteln
-Germany/Alt_Molln
+Germany/Alt_Mölln
 Germany/Alt_Rehse
 Germany/Alt_Schonau
 Germany/Alt_Schwerin
@@ -9055,7 +9055,7 @@ Germany/Bad_Ditzenbach
 Germany/Bad_Doberan
 Germany/Bad_Driburg
 Germany/Bad_Duben
-Germany/Bad_Durkheim
+Germany/Bad_Dürkheim
 Germany/Bad_Durrenberg
 Germany/Bad_Durrheim
 Germany/Bad_Eilsen
@@ -9067,7 +9067,7 @@ Germany/Bad_Essen
 Germany/Bad_Feilnbach
 Germany/Bad_Frankenhausen
 Germany/Bad_Freienwalde
-Germany/Bad_Fussing
+Germany/Bad_Füssing
 Germany/Bad_Gandersheim
 Germany/Bad_Griesbach
 Germany/Bad_Grund
@@ -9075,20 +9075,20 @@ Germany/Bad_Harzburg
 Germany/Bad_Heilbrunn
 Germany/Bad_Herrenalb
 Germany/Bad_Hersfeld
-Germany/Bad_Homburg_vor_der_Hohe
+Germany/Bad_Homburg_vor_der_Höhe
 Germany/Bad_Honnef_am_Rhein
-Germany/Bad_Honningen
+Germany/Bad_Hönningen
 Germany/Bad_Iburg
 Germany/Bad_Karlshafen
 Germany/Bad_Kissingen
 Germany/Bad_Kleinen
 Germany/Bad_Klosterlausnitz
 Germany/Bad_Kohlgrub
-Germany/Bad_Konig
-Germany/Bad_Konigshofen_im_Grabfeld
-Germany/Bad_Kosen
-Germany/Bad_Kostritz
-Germany/Bad_Kotzting
+Germany/Bad_König
+Germany/Bad_Königshofen_im_Grabfeld
+Germany/Bad_Kösen
+Germany/Bad_Köstritz
+Germany/Bad_Kötzting
 Germany/Bad_Kreuznach
 Germany/Bad_Laasphe
 Germany/Bad_Laer
@@ -9103,8 +9103,8 @@ Germany/Bad_Lippspringe
 Germany/Bad_Marienberg
 Germany/Bad_Mergentheim
 Germany/Bad_Munder_am_Deister
-Germany/Bad_Munster_am_Stein-Ebernburg
-Germany/Bad_Munstereifel
+Germany/Bad_Münster_am_Stein-Ebernburg
+Germany/Bad_Münstereifel
 Germany/Bad_Muskau
 Germany/Bad_Nauheim
 Germany/Bad_Nenndorf
@@ -9142,8 +9142,8 @@ Germany/Bad_Sulza
 Germany/Bad_Sulze
 Germany/Bad_Teinach-Zavelstein
 Germany/Bad_Tennstedt
-Germany/Bad_Tolz
-Germany/Bad_Uberkingen
+Germany/Bad_Tölz
+Germany/Bad_Überkingen
 Germany/Bad_Urach
 Germany/Bad_Vilbel
 Germany/Bad_Waldsee
@@ -9266,7 +9266,6 @@ Germany/Barum
 Germany/Baruth
 Germany/Barver
 Germany/Barwedel
-Germany/Barweiler
 Germany/Barweiler
 Germany/Basberg
 Germany/Basdahl
@@ -9466,7 +9465,7 @@ Germany/Berssel
 Germany/Berthelsdorf
 Germany/Bertingen
 Germany/Bertkow
-Germany/Bertsdorf-Hoernitz
+Germany/Bertsdorf-Hörnitz
 Germany/Berumbur
 Germany/Berzhahn
 Germany/Berzhausen
@@ -9651,10 +9650,9 @@ Germany/Bobenheim-Roxheim
 Germany/Bobenthal
 Germany/Bobing
 Germany/Bobingen
-Germany/Bobingen
 Germany/Bobingen_an_der_Rems
 Germany/Bobitz
-Germany/Boblingen
+Germany/Böblingen
 Germany/Bobrach
 Germany/Bobzin
 Germany/Bochingen
@@ -9967,7 +9965,6 @@ Germany/Bruchstedt
 Germany/Bruchweiler
 Germany/Bruchweiler-Barenbach
 Germany/Bruck
-Germany/Bruck
 Germany/Bruck_in_der_Oberpfalz
 Germany/Bruckberg
 Germany/Brucken
@@ -9975,14 +9972,14 @@ Germany/Bruckmuhl
 Germany/Brucktal
 Germany/Brudersdorf
 Germany/Bruel
-Germany/Brugge
+Germany/Brügge
 Germany/Bruggen
 Germany/Bruheim
 Germany/Bruhl
 Germany/Brumby
 Germany/Brunau
 Germany/Brunn
-Germany/Brunn
+Germany/Brünn
 Germany/Brunnen
 Germany/Brunnthal
 Germany/Brunow
@@ -10008,10 +10005,8 @@ Germany/Bucha
 Germany/Buchbach
 Germany/Buchbrunn
 Germany/Buchdorf
-Germany/Buchel
+Germany/Büchel
 Germany/Buchen
-Germany/Buchen
-Germany/Buchenbach
 Germany/Buchenbach
 Germany/Buchenberg
 Germany/Buchenbeuren
@@ -10036,7 +10031,7 @@ Germany/Budenheim
 Germany/Budesheim
 Germany/Budingen
 Germany/Budlich
-Germany/Buende
+Germany/Bünde
 Germany/Bufleben
 Germany/Bugewitz
 Germany/Buggenhagen
@@ -10132,8 +10127,8 @@ Germany/Busenhausen
 Germany/Busenwurth
 Germany/Busingen
 Germany/Buste
-Germany/Busum
-Germany/Busumer_Deichhausen
+Germany/Büsum
+Germany/Büsumer_Deichhausen
 Germany/Butjadingen
 Germany/Butow
 Germany/Buttel
@@ -11376,11 +11371,11 @@ Germany/Furstenstein
 Germany/Furstenwalde
 Germany/Furstenzell
 Germany/Furth
-Germany/Furth
+Germany/Fürth
 Germany/Furth_im_Wald
 Germany/Furthen
 Germany/Furtwangen
-Germany/Fussen
+Germany/Füssen
 Germany/Fussgonheim
 Germany/Gablenz
 Germany/Gablingen
@@ -11421,7 +11416,7 @@ Germany/Ganzlin
 Germany/Gappenach
 Germany/Garbsen
 Germany/Garching_an_der_Alz
-Germany/Garching_bei_Munchen
+Germany/Garching_bei_München
 Germany/Gardelegen
 Germany/Garding
 Germany/Garlipp
@@ -11804,7 +11799,7 @@ Germany/Grafenthal
 Germany/Grafenwiesen
 Germany/Grafenwohr
 Germany/Grafhorst
-Germany/Grafing_bei_Munchen
+Germany/Grafing_bei_München
 Germany/Grafrath
 Germany/Grainau
 Germany/Grainet
@@ -12133,7 +12128,7 @@ Germany/Guntersblum
 Germany/Guntersleben
 Germany/Gunthersdorf
 Germany/Gunzach
-Germany/Gunzburg
+Germany/Günzburg
 Germany/Gunzenhausen
 Germany/Gusenburg
 Germany/Gussefeld
@@ -12154,7 +12149,7 @@ Germany/Gutenstetten
 Germany/Gutenswegen
 Germany/Gutenzell-Hurbel
 Germany/Gutergluck
-Germany/Gutersloh
+Germany/Gütersloh
 Germany/Guthmannshausen
 Germany/Gutow
 Germany/Guttau
@@ -12184,7 +12179,7 @@ Germany/Hadmersleben
 Germany/Hafenlohr
 Germany/Hage
 Germany/Hagelstadt
-Germany/Hagen
+Germany/Hagen_Westfalen
 Germany/Hagen
 Germany/Hagen_im_Bremischen
 Germany/Hagenbach
@@ -12746,11 +12741,11 @@ Germany/Hockweiler
 Germany/Hodenhagen
 Germany/Hodingen
 Germany/Hodorf
-Germany/Hoehn
+Germany/Höhn
 Germany/Hof
 Germany/Hofbieber
-Germany/Hofen_an_der_Enz
-Germany/Hofer
+Germany/Höfen_an_der_Enz
+Germany/Höfer
 Germany/Hoffeld
 Germany/Hofgeismar
 Germany/Hofheim_am_Taunus
@@ -12762,7 +12757,7 @@ Germany/Hogersdorf
 Germany/Hogsdorf
 Germany/Hohberg
 Germany/Hohburg
-Germany/Hohe_Duene
+Germany/Hohe_Düne
 Germany/Hoheinod
 Germany/Hoheischweiler
 Germany/Hohen_Demzin
@@ -12834,7 +12829,7 @@ Germany/Hohndorf
 Germany/Hohnhorst
 Germany/Hohnstedt
 Germany/Hohnstein
-Germany/Hohr-Grenzhausen
+Germany/Höhr-Grenzhausen
 Germany/Hohwacht
 Germany/Hoisdorf
 Germany/Holdenstedt
@@ -12880,7 +12875,7 @@ Germany/Holzsussra
 Germany/Holzweissig
 Germany/Holzwickede
 Germany/Homberg
-Germany/Homberg
+Germany/Hömberg
 Germany/Homburg
 Germany/Hommerdingen
 Germany/Honerath
@@ -12994,8 +12989,8 @@ Germany/Hunxe
 Germany/Hunzel
 Germany/Hupperath
 Germany/Hurlach
-Germany/Hurtgenwald
-Germany/Hurth
+Germany/Hürtgenwald
+Germany/Hürth
 Germany/Hurup
 Germany/Huselitz
 Germany/Husum
@@ -13384,7 +13379,7 @@ Germany/Kemnitz
 Germany/Kempen
 Germany/Kempenich
 Germany/Kempfeld
-Germany/Kempten_(Allgaeu)
+Germany/Kempten_(Allgäu)
 Germany/Kenn
 Germany/Kenzingen
 Germany/Keppeshausen
@@ -13459,7 +13454,7 @@ Germany/Kirchheim
 Germany/Kirchheim_am_Neckar
 Germany/Kirchheim_am_Ries
 Germany/Kirchheim_an_der_Weinstrasse
-Germany/Kirchheim_bei_Muenchen
+Germany/Kirchheim_bei_München
 Germany/Kirchheim_unter_Teck
 Germany/Kirchheimbolanden
 Germany/Kirchhundem
@@ -13669,30 +13664,30 @@ Germany/Kommen
 Germany/Komptendorf
 Germany/Kongen
 Germany/Kongernheim
-Germany/Konigerode
-Germany/Konigheim
-Germany/Konigs_Wusterhausen
-Germany/Konigsau
-Germany/Konigsbach-Stein
-Germany/Konigsborn
-Germany/Konigsbronn
-Germany/Konigsbruck
-Germany/Konigsbrunn
-Germany/Konigsdorf
-Germany/Konigsee
-Germany/Konigseggwald
-Germany/Konigsfeld
-Germany/Konigsfeld_im_Schwarzwald
-Germany/Konigshain
-Germany/Konigsheim
-Germany/Konigshutte
-Germany/Konigslutter_am_Elm
-Germany/Konigsmark
-Germany/Konigsmoor
-Germany/Konigstein
-Germany/Konigstein_im_Taunus
-Germany/Konigswalde
-Germany/Konigswartha
+Germany/Königerode
+Germany/Königheim
+Germany/Königs_Wusterhausen
+Germany/Königsau
+Germany/Königsbach-Stein
+Germany/Königsborn
+Germany/Königsbronn
+Germany/Königsbruck
+Germany/Königsbrunn
+Germany/Königsdorf
+Germany/Königsee
+Germany/Königseggwald
+Germany/Königsfeld
+Germany/Königsfeld_im_Schwarzwald
+Germany/Königshain
+Germany/Königsheim
+Germany/Königshutte
+Germany/Königslutter_am_Elm
+Germany/Königsmark
+Germany/Königsmoor
+Germany/Königstein
+Germany/Königstein_im_Taunus
+Germany/Königswalde
+Germany/Königswartha
 Germany/Königswinter
 Germany/Konitz
 Germany/Konken
@@ -14635,7 +14630,7 @@ Germany/Maulburg
 Germany/Mauschbach
 Germany/Mauth
 Germany/Maxdorf
-Germany/Maxhutte-Haidhof
+Germany/Maxhütte-Haidhof
 Germany/Maxsain
 Germany/Mayen
 Germany/Mayschoss
@@ -14874,7 +14869,7 @@ Germany/Mogglingen
 Germany/Moglingen
 Germany/Mohlau
 Germany/Mohlsdorf
-Germany/Mohnesee
+Germany/Möhnesee
 Germany/Mohnsen
 Germany/Mohrenbach
 Germany/Mohrendorf
@@ -14991,75 +14986,76 @@ Germany/Mudershausen
 Germany/Mugeln
 Germany/Muggensturm
 Germany/Muhbrook
-Germany/Muhl_Rosin
-Germany/Muhlacker
-Germany/Muhlanger
-Germany/Muhlau
-Germany/Muhlbeck
-Germany/Muhlberg
-Germany/Muhldorf
-Germany/Muhlen_Eichsen
+Germany/Mühl_Rosin
+Germany/Mühlacker
+Germany/Mühlanger
+Germany/Mühlau
+Germany/Mühlbeck
+Germany/Mühlberg
+Germany/Mühldorf
+Germany/Mühlen_Eichsen
 Germany/Muhlenbach
-Germany/Muhlenbarbek
-Germany/Muhlenrade
-Germany/Muhlhausen
-Germany/Muhlhausen
-Germany/Muhlhausen-Ehingen
-Germany/Muhlheim
-Germany/Muhlheim_am_Bach
-Germany/Muhlingen
-Germany/Muhlpfad
-Germany/Muhltroff
-Germany/Muhr_amSee
+Germany/Mühlenbarbek
+Germany/Mühlenrade
+Germany/Mühlhausen
+Germany/Mühlhausen
+Germany/Mühlhausen-Ehingen
+Germany/Mühlheim
+Germany/Mühlheim_am_Bach
+Germany/Mühlingen
+Germany/Mühlpfad
+Germany/Mühltroff
+Germany/Muhr_am_See
 Germany/Mulbach
 Germany/Mulda
 Germany/Muldenstein
 Germany/Mulfingen
-Germany/Mulheim
-Germany/Mulheim_an_der_Ruhr
-Germany/Mulheim-Karlich
-Germany/Mullenbach
-Germany/Mullheim
-Germany/Mullrose
-Germany/Mulsen
+Germany/Mülheim
+Germany/Mülheim_an_der_Ruhr
+Germany/Mülheim-Kärlich
+Germany/Müllenbach
+Germany/Müllheim
+Germany/Müllrose
+Germany/Mülsen
 Germany/Mulsum
-Germany/Mulverstedt
-Germany/Munchberg
-Germany/Muncheberg
-Germany/Munchehofe
-Germany/Munchenbernsdorf
-Germany/Munchhausen
-Germany/Munchsmunster
-Germany/Munchsteinach
-Germany/Munchwald
-Germany/Munchweiler_am_Klingbach
-Germany/Munchweiler_an_der_Alsenz
-Germany/Munchweiler_an_der_Rodalbe
+Germany/Mülverstedt
+Germany/Münchberg
+Germany/Müncheberg
+Germany/Münchehofe
+Germany/Münchenbernsdorf
+Germany/Münchhausen
+Germany/Münchsmünster
+Germany/Münchsteinach
+Germany/Münchwald
+Germany/Münchweiler_am_Klingbach
+Germany/Münchweiler_an_der_Alsenz
+Germany/Münchweiler_an_der_Rodalbe
 Germany/Mundelsheim
 Germany/Munderkingen
 Germany/Mundersbach
-Germany/Munich
-Germany/Munk
+Germany/München
+Germany/Münk
 Germany/Munkbrarup
-Germany/Munnerstadt
+Germany/Münnerstadt
 Germany/Munningen
-Germany/Munsing
+Germany/Münsing
 Germany/Munsingen
+Germany/Munster
 Germany/Münster
-Germany/Munsterappel
-Germany/Munsterdorf
-Germany/Munsterhausen
-Germany/Munstermaifeld
-Germany/Munster-Sarmsheim
-Germany/Munzenberg
+Germany/Münsterappel
+Germany/Münsterdorf
+Germany/Münsterhausen
+Germany/Münstermaifeld
+Germany/Münster-Sarmsheim
+Germany/Münzenberg
 Germany/Murchin
 Germany/Murg
-Germany/Murlenbach
+Germany/Mürlenbach
 Germany/Murnau_am_Staffelsee
 Germany/Murr
 Germany/Murrhardt
-Germany/Musch
-Germany/Muschenbach
+Germany/Müsch
+Germany/Müschenbach
 Germany/Muschwitz
 Germany/Mussen
 Germany/Mustin
@@ -15067,8 +15063,8 @@ Germany/Musweiler
 Germany/Mutlangen
 Germany/Mutterschied
 Germany/Mutterstadt
-Germany/Mutzel
-Germany/Mutzenich
+Germany/Mützel
+Germany/Mützenich
 Germany/Mutzschen
 Germany/Muxerath
 Germany/Mylau
@@ -15179,7 +15175,7 @@ Germany/Neu_Gaarz
 Germany/Neu_Gulze
 Germany/Neu_Heinde
 Germany/Neu_Isenburg
-Germany/Neu_Kaebelich
+Germany/Neu_Käbelich
 Germany/Neu_Kaliss
 Germany/Neu_Konigsaue
 Germany/Neu_Kosenow
@@ -15524,9 +15520,9 @@ Germany/Notzingen
 Germany/Nubbel
 Germany/Nudersdorf
 Germany/Nudlingen
-Germany/Nuernberg
+Germany/Nürnberg
 Germany/Nufringen
-Germany/Numbrecht
+Germany/Nümbrecht
 Germany/Nunchritz
 Germany/Nunschweiler
 Germany/Nurburg
@@ -19370,7 +19366,7 @@ Germany/Wurmsham
 Germany/Wurrich
 Germany/Wurselen
 Germany/Wurzbach
-Germany/Wurzburg
+Germany/Würzburg
 Germany/Wurzen
 Germany/Wurzweiler
 Germany/Wuschheim
