add locale de- fix km/h

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -11370,7 +11370,6 @@ Germany/Fursteneck
 Germany/Furstenstein
 Germany/Furstenwalde
 Germany/Furstenzell
-Germany/Furth
 Germany/Fürth
 Germany/Furth_im_Wald
 Germany/Furthen
@@ -11730,14 +11729,14 @@ Germany/Gonnersdorf
 Germany/Gonnheim
 Germany/Goosefeld
 Germany/Gopfersdorf
-Germany/Goppingen
+Germany/Göppingen
 Germany/Gorenzen
 Germany/Gorgeshausen
 Germany/Gorisried
 Germany/Goritz
 Germany/Gorkwitz
 Germany/Gorleben
-Germany/Gorlitz
+Germany/Görlitz
 Germany/Gorlosen
 Germany/Gormin
 Germany/Gornau
@@ -11762,7 +11761,7 @@ Germany/Gossersweiler-Stein
 Germany/Gossitz
 Germany/Gosslow
 Germany/Gossnitz
-Germany/Gossweinstein
+Germany/Gössweinstein
 Germany/Gosswitz
 Germany/Gotha
 Germany/Gottenheim
@@ -11786,7 +11785,7 @@ Germany/Grabowhofe
 Germany/Grabsleben
 Germany/Grafelfing
 Germany/Grafenau
-Germany/Grafenberg
+Germany/Gräfenberg
 Germany/Grafendhron
 Germany/Grafendorf
 Germany/Grafengehaig
@@ -11797,7 +11796,7 @@ Germany/Grafenrheinfeld
 Germany/Grafenroda
 Germany/Grafenthal
 Germany/Grafenwiesen
-Germany/Grafenwohr
+Germany/Grafenwöhr
 Germany/Grafhorst
 Germany/Grafing_bei_München
 Germany/Grafrath
@@ -12081,15 +12080,15 @@ Germany/Grundsheim
 Germany/Grunebach
 Germany/Grunenbach
 Germany/Grunendeich
-Germany/Grunewald
+Germany/Grünewald
 Germany/Grunhain
 Germany/Grunhainichen
-Germany/Grunheide
+Germany/Grünheide
 Germany/Grunkraut
 Germany/Grunow
 Germany/Grunsfeld
 Germany/Grunstadt
-Germany/Grunwald
+Germany/Grünwald
 Germany/Grussow
 Germany/Gschwend
 Germany/Gstadt_am_Chiemsee
@@ -17239,18 +17238,18 @@ Germany/Schoneck
 Germany/Schonecken
 Germany/Schonefeld
 Germany/Schoneiche
-Germany/Schonenberg
-Germany/Schonenberg-Kubelberg
+Germany/Schönenberg
+Germany/Schönenberg-Kubelberg
 Germany/Schonermark
 Germany/Schonewalde
 Germany/Schoneworde
-Germany/Schonfeld
+Germany/Schönfeld
 Germany/Schongau
 Germany/Schongeising
 Germany/Schongleina
 Germany/Schonhagen
 Germany/Schonhausen
-Germany/Schonheide
+Germany/Schönheide
 Germany/Schoningen
 Germany/Schonkirchen
 Germany/Schonsee
@@ -17258,9 +17257,9 @@ Germany/Schonstedt
 Germany/Schonstett
 Germany/Schonthal
 Germany/Schonungen
-Germany/Schonwald
-Germany/Schonwalde
-Germany/Schonwalde_am_Bungsberg
+Germany/Schönwald
+Germany/Schönwalde
+Germany/Schönwalde_am_Bungsberg
 Germany/Schopfheim
 Germany/Schopfloch
 Germany/Schopp
@@ -17307,8 +17306,8 @@ Germany/Schwabach
 Germany/Schwabbruck
 Germany/Schwabenheim
 Germany/Schwabhausen
-Germany/Schwabisch_Gmund
-Germany/Schwabisch_Hall
+Germany/Schwäbisch_Gmünd
+Germany/Schwäbisch_Hall
 Germany/Schwabmunchen
 Germany/Schwabsoien
 Germany/Schwabstedt
