--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -239,22 +239,6 @@ Bulgaria/Vidin
 Bulgaria/Vratsa
 Bulgaria/Yambol
 ########
-China/Hangzhou
-China/Beijing
-China/Shanghai
-China/Changsha
-China/Chengdu
-China/Chongqing
-China/Fuzhou
-China/Guangzhou
-China/Nanjing
-China/Qingdao
-China/Shenyang
-China/Zhengzhou
-China/Dalian
-China/Guilin
-China/Guiyang
-########
 Croatia/Baska
 Croatia/Bjelovar
 Croatia/Bol
@@ -358,45 +342,119 @@ Estonia/Valga
 Estonia/Viljandi
 Estonia/Võru
 ########
+Finland/Akaa
+Finland/Alavus
 Finland/Anjala
-Finland/Ekenas
-Finland/Enontekio
+Finland/Enontekiö
+Finland/Espoo
+Finland/Eura
 Finland/Forssa
-Finland/Hameenlinna
+Finland/Hamina
 Finland/Hanko
 Finland/Heinola
 Finland/Helsinki
-Finland/Hyvinkaa
+Finland/Hollola
+Finland/Hyvinkää
+Finland/Hämeenkyrö
+Finland/Hämeenlinna
+Finland/Ii
 Finland/Iisalmi
+Finland/Ilmajoki
+Finland/Imatra
+Finland/Janakkala
 Finland/Joensuu
-Finland/Jyvaskyla
+Finland/Jyväskylä
+Finland/Jämsä
+Finland/Järvenpää
+Finland/Kaarina
 Finland/Kajaani
+Finland/Kalajoki
+Finland/Kangasala
+Finland/Kankaanpää
+Finland/Kauhajoki
+Finland/Kauhava
+Finland/Kauniainen
 Finland/Kemi
+Finland/Kempele
+Finland/Kerava
+Finland/Kitee
 Finland/Kittila
+Finland/Kirkkonummi
 Finland/Kokkola
+Finland/Kontiolahti
 Finland/Kotka
+Finland/Kurikka
 Finland/Kouvola
 Finland/Kuopio
+Finland/Kuusamo
 Finland/Lahti
+Finland/Lappeenranta
+Finland/Lapua
+Finland/Laukaa
+Finland/Lempäälä
+Finland/Lieksa
+Finland/Lieto
+Finland/Liminka
+Finland/Liperi
+Finland/Lohja
+Finland/Loimaa
+Finland/Loviisa
 Finland/Maarianhamina
-Finland/Nykarleby
+Finland/Masku
+Finland/Mikkeli
+Finland/Mustasaari
+Finland/Muurame
+Finland/Mäntsälä
+Finland/Naantali
+Finland/Nivala
+Finland/Nokia
+Finland/Nurmijärvi
+Finland/Orimattila
 Finland/Oulu
 Finland/Outokumpu
+Finland/Paimio
+Finland/Parainen
+Finland/Pedersören kunta
 Finland/Pelkosenniemi
+Finland/Pieksämäki
+Finland/Pietarsaari
+Finland/Pirkkala
 Finland/Pori
 Finland/Porvoo
-Finland/Pyhajarvi
+Finland/Pyhäjärvi
 Finland/Raahe
+Finland/Raasepori
+Finland/Raisio
 Finland/Rauma
+Finland/Riihimäki
 Finland/Rovaniemi
-Finland/Sodankyla
-Finland/Sysma
+Finland/Salo
+Finland/Sastamala
+Finland/Savonlinna
+Finland/Seinäjoki
+Finland/Siilinjärvi
+Finland/Sipoo
+Finland/Sodankylä
+Finland/Sotkamo
+Finland/Sysmä
+Finland/Tammisaari
 Finland/Tampere
+Finland/Tornio
 Finland/Turku
+Finland/Tuusula
+Finland/Ulvila
 Finland/Utsjoki
+Finland/Uusikaarlepyy
+Finland/Uusikaupunki
 Finland/Vaasa
+Finland/Valkeakoski
+Finland/Vantaa
 Finland/Varkaus
+Finland/Vihti
 Finland/Vuokatti
+Finland/Ylivieska
+Finland/Ylöjärvi
+Finland/Äänekoski
 ########
 France/Albi
 France/Amiens
@@ -21875,11 +21933,14 @@ Cambodia/Pursat
 Cambodia/Siemreab
 ########
 China/Beijing
+China/Changsha
 China/Chengdu
 China/Chongqing
 China/Dalian
 China/Fuzhou
 China/Guangzhou
+China/Guilin
+China/Guiyang
 China/Haikou
 China/Hangzhou
 China/Harbin
@@ -21888,6 +21949,7 @@ China/Kunming
 China/Lanzhou
 China/Lhasa
 China/Nanjing
+China/Qingdao
 China/Qufu
 China/Shanghai
 China/Shenyang
